--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <header class="header">
       <!-- <header class="header"> -->
       <div class="header__wrapper">
-        <a href="#" class="logo header__logo">NewsExplorer</a>
+        <a href="/" class="logo header__logo">NewsExplorer</a>
+
         <nav class="header__menu">
           <ul class="menu main-menu">
             <li class="menu__item main-menu__item"><a class="menu__link main-menu__link main-menu__link_active" href="#">Home</a></li>
@@ -22,7 +23,20 @@
           </ul>
           <button class="btn btn__header btn__header_logout">Elise Elise</button>
         </nav>
+
+        <div class="burger-menu header__burger-menu"></div>
+
+
+
       </div>
+      <nav class="header__menu header__menu_mobile">
+        <ul class="menu mobile-menu">
+          <li class="menu__item main-menu__item mobile-menu__item"><a class="menu__link main-menu__link mobile-menu__link main-menu__link_active" href="#">Home</a></li>
+          <li class="menu__item main-menu__item mobile-menu__item"><a class="menu__link main-menu__link mobile-menu__link" href="/articles">Saved articles</a></li>
+        </ul>
+        <button class="btn btn__header mobile-menu__btn btn__header_logout">Elise Elise</button>
+      </nav>
+
     </header>
     <section class="search">
       <h1 class="search__heading">What's going on in the world?</h1>
@@ -33,100 +47,104 @@
       </form>
     </section>
   </div>
-  <section class="searching-for">
+  <!-- <section class="searching-for">
     <div class="searching-for__results">
       <div class="spinner searching-for__spinner"></div>
       <p class="searching-for__text">Searching for news...</p>
     </div>
-  </section>
+  </section> -->
 
-  <section class="searching-for">
+  <!-- <section class="searching-for">
     <div class="searching-for__results searching-for__results_no">
       <h3 class="searching-for__heading">Nothing found</h3>
       <p class="searching-for__text">Sorry, but nothing matched your search terms.</p>
     </div>
+  </section> -->
+  <main class="main">
+    <section class="search-results">
+      <h2 class="heading search-results__heading">Search results</h2>
+      <ul class="news">
+        <!-- <template id="card"> -->
+        <li class="news__item">
+          <div class="news__tools">
+            <!-- <span class="news__tooltip">Sign in to save articles</span>
+              <button class="btn btn-news news__icon-save"></button> -->
 
-    <main class="main">
-      <section class="search-results">
-        <h2 class="heading search-results__heading">Search results</h2>
-        <ul class="news">
-          <!-- <template id="card"> -->
-            <li class="news__item">
-              <div class="news__tools">
-                <!-- <span class="news__tooltip">Sign in to save articles</span>
-                <button class="btn btn-news news__icon-save"></button> -->
+            <span class="news__tooltip">Remove from saved</span>
+            <button class="btn btn-news news__icon-trash"></button>
+          </div>
+          <div class="news__post">
+            <div class="news__date">November 4, 2020</div>
+            <h3 class="news__title">Everyone Needs a Special 'Sit Spot' in Nature</h3>
+            <p class="news__text">Ever since I read Richard Louv's influential book, "Last Child in the Woods," the idea of having a special "sit spot" has stuck with me. This advice, which Louv attributes to nature educator Jon Young, is for both
+              adults and children to find</p>
+            <div class="news__source">treehugger</div>
+          </div>
+        </li>
+        <li class="news__item">
+          <div class="news__tools">
+            <!-- <span class="news__tooltip">Sign in to save articles</span>
+              <button class="btn btn-news news__icon-save"></button> -->
 
-                <span class="news__tooltip">Remove from saved</span>
-                <button class="btn btn-news news__icon-trash"></button>
-              </div>
-              <div class="news__post">
-                <div class="news__date">November 4, 2020</div>
-                <h3 class="news__title">Everyone Needs a Special 'Sit Spot' in Nature</h3>
-                <p class="news__text">Ever since I read Richard Louv's influential book, "Last Child in the Woods," the idea of having a special "sit spot" has stuck with me. This advice, which Louv attributes to nature educator Jon Young, is for both adults and children to find</p>
-                <div class="news__source">treehugger</div>
-              </div>
-            </li>
-            <li class="news__item">
-              <div class="news__tools">
-                <!-- <span class="news__tooltip">Sign in to save articles</span>
-                <button class="btn btn-news news__icon-save"></button> -->
+            <span class="news__tooltip">Remove from saved</span>
+            <button class="btn btn-news news__icon-trash"></button>
+          </div>
+          <div class="news__post">
+            <div class="news__date">November 4, 2020</div>
+            <h3 class="news__title">Everyone Needs a Special 'Sit Spot' in Nature</h3>
+            <p class="news__text">Ever since I read Richard Louv's influential book, "Last Child in the Woods," the idea of having a special "sit spot" has stuck with me. This advice, which Louv attributes to nature educator Jon Young, is for both
+              adults and children to find</p>
+            <div class="news__source">treehugger</div>
+          </div>
+        </li>
+        <li class="news__item">
+          <div class="news__tools">
+            <!-- <span class="news__tooltip">Sign in to save articles</span>
+              <button class="btn btn-news news__icon-save"></button> -->
 
-                <span class="news__tooltip">Remove from saved</span>
-                <button class="btn btn-news news__icon-trash"></button>
-              </div>
-              <div class="news__post">
-                <div class="news__date">November 4, 2020</div>
-                <h3 class="news__title">Everyone Needs a Special 'Sit Spot' in Nature</h3>
-                <p class="news__text">Ever since I read Richard Louv's influential book, "Last Child in the Woods," the idea of having a special "sit spot" has stuck with me. This advice, which Louv attributes to nature educator Jon Young, is for both adults and children to find</p>
-                <div class="news__source">treehugger</div>
-              </div>
-            </li>
-            <li class="news__item">
-              <div class="news__tools">
-                <!-- <span class="news__tooltip">Sign in to save articles</span>
-                <button class="btn btn-news news__icon-save"></button> -->
-
-                <span class="news__tooltip">Remove from saved</span>
-                <button class="btn btn-news news__icon-trash"></button>
-              </div>
-              <div class="news__post">
-                <div class="news__date">November 4, 2020</div>
-                <h3 class="news__title">Everyone Needs a Special 'Sit Spot' in Nature</h3>
-                <p class="news__text">Ever since I read Richard Louv's influential book, "Last Child in the Woods," the idea of having a special "sit spot" has stuck with me. This advice, which Louv attributes to nature educator Jon Young, is for both adults and children to find</p>
-                <div class="news__source">treehugger</div>
-              </div>
-            </li>
-          <!-- </template> -->
-        </ul>
-        <button type="button" class="btn search-result__btn">Show more</button>
-      </section>
-      <section class="about">
-        <img class="about__avatar" src="../images/temp/author.png" alt="Author picture">
-        <div class="about__info">
-          <h2 class="heading about__heading">About the author</h2>
-          <p class="about__text">This block describes the project author. Here you should indicate your name, what you do, and which development technologies you know.</p>
-          <p class="about__text">You can also talk about your experience with Practicum, what you learned there, and how you can help potential customers.</p>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <p class="footer__copyright"> © 2020 Supersite, Powered by News API</p>
-      <div class="footer__links">
-        <ul class="menu foo-menu">
-          <li class="menu__item foo-menu__item"><a href="#" class="menu__link foo-menu__link foo-menu__link_active">Home</a></li>
-          <li class="menu__item foo-menu__item"><a href="#" class="menu__link foo-menu__link">Practicum by Yandex</a></li>
-        </ul>
-        <ul class="menu foo-social">
-          <li class="menu__item foo-social__item"><a href="#" class="menu__link foo-social__link foo-social__link_fb"></a></li>
-          <li class="menu__item foo-social__item"><a href="#" class="menu__link foo-social__link foo-social__link_gh"></a></li>
-        </ul>
+            <span class="news__tooltip">Remove from saved</span>
+            <button class="btn btn-news news__icon-trash"></button>
+          </div>
+          <div class="news__post">
+            <div class="news__date">November 4, 2020</div>
+            <h3 class="news__title">Everyone Needs a Special 'Sit Spot' in Nature</h3>
+            <p class="news__text">Ever since I read Richard Louv's influential book, "Last Child in the Woods," the idea of having a special "sit spot" has stuck with me. This advice, which Louv attributes to nature educator Jon Young, is for both
+              adults and children to find</p>
+            <div class="news__source">treehugger</div>
+          </div>
+        </li>
+        <!-- </template> -->
+      </ul>
+      <button type="button" class="btn search-result__btn">Show more</button>
+    </section>
+    <section class="about">
+      <img class="about__avatar" src="../images/temp/author.png" alt="Author picture">
+      <div class="about__info">
+        <h2 class="heading about__heading">About the author</h2>
+        <p class="about__text">This block describes the project author. Here you should indicate your name, what you do, and which development technologies you know.</p>
+        <p class="about__text">You can also talk about your experience with Practicum, what you learned there, and how you can help potential customers.</p>
       </div>
-    </footer>
+    </section>
+  </main>
+  <footer class="footer">
+    <p class="footer__copyright"> © 2020 Supersite, Powered by News API</p>
+    <div class="footer__links">
+      <ul class="menu foo-menu">
+        <li class="menu__item foo-menu__item"><a href="#" class="menu__link foo-menu__link foo-menu__link_active">Home</a></li>
+        <li class="menu__item foo-menu__item"><a href="#" class="menu__link foo-menu__link">Practicum by Yandex</a></li>
+      </ul>
+      <ul class="menu foo-social">
+        <li class="menu__item foo-social__item"><a href="#" class="menu__link foo-social__link foo-social__link_fb"></a></li>
+        <li class="menu__item foo-social__item"><a href="#" class="menu__link foo-social__link foo-social__link_gh"></a></li>
+      </ul>
+    </div>
+  </footer>
 
-    <!-- invisible blocks -->
-    <!-- login -->
-    <div class="popup popup_opened">
-    <!-- <div class="popup"> -->
+
+  <!-- invisible blocks -->
+  <!-- login -->
+  <!-- <div class="popup popup_opened"> -->
+  <!-- <div class="popup">
       <div class="popup__container">
         <span class="popup__close">+</span>
         <div class='main'>
@@ -148,11 +166,11 @@
         </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <!-- signup -->
-    <!-- <div class="popup popup_opened"> -->
-    <div class="popup">
+  <!-- signup -->
+  <!-- <div class="popup popup_opened"> -->
+  <!-- <div class="popup">
       <div class="popup__container">
         <span class="popup__close">+</span>
         <div class="main">
@@ -178,16 +196,17 @@
         </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <!-- delete confirmation -->
-    <div class="popup">
+  <!-- registration confirmation -->
+  <!-- <div class="popup popup_opened"> -->
+  <!-- <div class="popup">
       <div class="popup__container">
         <span class="popup__close">+</span>
-        <form action="#" method="post" class="form delete-card" novalidate>
-          <h2 class="delete-card__heading">Are you sure?</h2>
-          <input type="submit" name="confirm" class="btn form__submit delete-card__submit" value="Yes">
+        <form action="#" method="post" class="form confirm-card" novalidate>
+          <h2 class="popup-form__heading">Registration successfully completed!</h2>
         </form>
+        <span class="popup-form__bottom"><a class='link confirm-card__link popup-form__link' to="/signin">Sign in</a></span>
       </div>
     </div>
 
@@ -202,7 +221,7 @@
           </div>
         </div>
       </li>
-    </template>
+    </template> -->
 </body>
 
 </html>
