Fix errors in responsive design

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -11,7 +11,7 @@
 
 <body class="page articles-page">
   <div class="page__top articles-page__top">
-    <header class="header">
+    <header class="header articles-page__header header_theme_light">
       <div class="header__wrapper">
         <a href="#" class="logo header__logo logo_theme_light">NewsExplorer</a>
         <nav class="header__menu">
